// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuillHeading should get style 1`] = `
Object {
  "color": "grey",
  "fontSize": 24,
  "fontWeight": "bold",
}
`;

exports[`QuillHeading should render 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "grey",
      "fontWeight": "bold",
    }
  }
/>
`;
